--- a/WpfApplication1/app.config
+++ b/WpfApplication1/app.config
@@ -8,7 +8,7 @@
     <userSettings>
         <Wpf.Properties.Settings>
             <setting name="DataSource" serializeAs="String">
-                <value>Data.db</value>
+                <value>DataWithoutPassword.db</value>
             </setting>
         </Wpf.Properties.Settings>
     </userSettings>
