--- a/WpfApplication1/Properties/Settings.settings
+++ b/WpfApplication1/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="DataSource" Type="System.String" Scope="User">
-      <Value Profile="(Default)">DataWithoutPassword.db</Value>
+      <Value Profile="(Default)">Data.db</Value>
     </Setting>
   </Settings>
 </SettingsFile>
