获取修改的行的id成功。

--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -104,7 +104,11 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Docs\base.sql" />
     <Content Include="Lib\System.Data.SQLite.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Excel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
