--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -10,6 +10,9 @@
             <setting name="DataSource" serializeAs="String">
                 <value>Data.db</value>
             </setting>
+            <setting name="Path" serializeAs="String">
+                <value />
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
