1.	增加累计“借方发射额”与“累计贷方发生额”这两个放置表格下方位置

--- a/WpfApplication3/Properties/Settings.settings
+++ b/WpfApplication3/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="Path" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="借方发生额累计" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="贷方发生额累计" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
