添加账号密码功能

--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ExcelPlus\Test.cs" />
     <Compile Include="Helper\Date.cs" />
     <Compile Include="Helper\Log.cs" />
+    <Compile Include="Helper\Secure.cs" />
     <Compile Include="ViewModel\ViewModel_Report.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
