--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -69,6 +69,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Data\DataDef.cs" />
+    <Compile Include="Data\Statistics.cs" />
     <Compile Include="ExcelPlus\ExcelInit.cs" />
     <Compile Include="ExcelPlus\Test.cs" />
     <Compile Include="Helper\Date.cs" />
