解决删除数据后点击右上角户型下拉框的时候数据库锁定的问题

--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -19,6 +19,9 @@
             <setting name="贷方发生额累计" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="DBconnect" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
