--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -8,7 +8,7 @@
     <userSettings>
         <Wpf.Properties.Settings>
             <setting name="DataSource" serializeAs="String">
-                <value>Data.db</value>
+                <value>Data\Data.db</value>
             </setting>
             <setting name="Path" serializeAs="String">
                 <value />
