--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ExcelPlus\ExcelExport.cs" />
     <Compile Include="ExcelPlus\ExcelImport.cs" />
     <Compile Include="Helper\Date.cs" />
+    <Compile Include="Helper\FileSystemCheck.cs" />
     <Compile Include="Helper\Log.cs" />
     <Compile Include="Helper\Secure.cs" />
     <Compile Include="ViewModel\ViewModel_Report.cs" />
