--- a/WpfApplication3/Properties/Settings.settings
+++ b/WpfApplication3/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="贷方发生额累计" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="借方发生额合计" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="贷方发生额合计" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
