--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -19,6 +19,12 @@
             <setting name="贷方发生额累计" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="借方发生额合计" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="贷方发生额合计" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
