--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -25,6 +25,12 @@
             <setting name="贷方发生额合计" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="下拉框_年" serializeAs="String">
+                <value>2014</value>
+            </setting>
+            <setting name="下拉框_月" serializeAs="String">
+                <value>1</value>
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
