--- a/WpfApplication3/Properties/Settings.settings
+++ b/WpfApplication3/Properties/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="贷方发生额合计" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="下拉框_年" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2014</Value>
+    </Setting>
+    <Setting Name="下拉框_月" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
