--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -31,6 +31,9 @@
             <setting name="下拉框_月" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="下拉框_户型" serializeAs="String">
+                <value>1</value>
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
