--- a/WpfApplication3/Properties/Settings.settings
+++ b/WpfApplication3/Properties/Settings.settings
@@ -8,16 +8,16 @@
     <Setting Name="Path" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="借方发生额累计" Type="System.Double" Scope="User">
+    <Setting Name="借方发生额累计" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="贷方发生额累计" Type="System.Double" Scope="User">
+    <Setting Name="贷方发生额累计" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="借方发生额合计" Type="System.Double" Scope="User">
+    <Setting Name="借方发生额合计" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="贷方发生额合计" Type="System.Double" Scope="User">
+    <Setting Name="贷方发生额合计" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="下拉框_年" Type="System.Int32" Scope="User">
