--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -34,6 +34,9 @@
             <setting name="下拉框_户型" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="LogsPath" serializeAs="String">
+                <value />
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
