增加密码修改功能

--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -34,7 +34,13 @@
             <setting name="下拉框_户型" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="LogsPath" serializeAs="String">
+            <setting name="起始年" serializeAs="String">
+                <value>2011</value>
+            </setting>
+            <setting name="结束年" serializeAs="String">
+                <value>2018</value>
+            </setting>
+            <setting name="登陆用户名" serializeAs="String">
                 <value />
             </setting>
         </Wpf.Properties.Settings>
