--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -43,6 +43,9 @@
             <setting name="登陆用户名" serializeAs="String">
                 <value />
             </setting>
+            <setting name="注册码" serializeAs="String">
+                <value>0000-0000-0000-0000</value>
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
