--- a/WpfApplication3/Properties/Settings.settings
+++ b/WpfApplication3/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="登陆用户名" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="注册码" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0000-0000-0000-0000</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
