--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -123,7 +123,7 @@
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Docs\Data.db" />
-    <None Include="Docs\模板表.xls" />
+    <None Include="Docs\templt.xls" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
