--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Helper\Secure.cs" />
     <Compile Include="Model\Model_操作记录.cs" />
     <Compile Include="ViewModel\ViewModel_Report.cs" />
+    <Compile Include="ViewModel\ViewModel_操作记录.cs" />
     <Compile Include="Win\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
