添加软件注册，拷贝就不能用了！

--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -44,7 +44,10 @@
                 <value />
             </setting>
             <setting name="注册码" serializeAs="String">
-                <value>0000-0000-0000-0000</value>
+                <value>md5</value>
+            </setting>
+            <setting name="初始化程序" serializeAs="String">
+                <value>False</value>
             </setting>
         </Wpf.Properties.Settings>
     </userSettings>
