--- a/WpfApplication3/Properties/Settings.settings
+++ b/WpfApplication3/Properties/Settings.settings
@@ -39,7 +39,10 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="注册码" Type="System.String" Scope="User">
-      <Value Profile="(Default)">0000-0000-0000-0000</Value>
+      <Value Profile="(Default)">md5</Value>
+    </Setting>
+    <Setting Name="初始化程序" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
