更新防盗版，未完成

--- a/WpfApplication3/Properties/Settings.settings
+++ b/WpfApplication3/Properties/Settings.settings
@@ -44,5 +44,11 @@
     <Setting Name="初始化程序" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="注册时间" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="正式版" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
