--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -49,6 +49,12 @@
             <setting name="初始化程序" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="注册时间" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="正式版" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
