--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -53,7 +53,7 @@
                 <value />
             </setting>
             <setting name="正式版" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </Wpf.Properties.Settings>
     </userSettings>
