--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -55,6 +55,24 @@
             <setting name="正式版" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="初始金额_预算内户" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="初始金额_预算外户" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="初始金额_周转金户" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="初始金额_计生专户" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="初始金额_政粮补贴资金专户" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="初始金额_土地户" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
