--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -85,6 +85,9 @@
     </Compile>
     <Compile Include="ViewModel\ViewModel_Report.cs" />
     <Compile Include="ViewModel\ViewModel_操作记录.cs" />
+    <Compile Include="View\Pages\Page_SignIn.xaml.cs">
+      <DependentUpon>Page_SignIn.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Pages\Page_主内容.xaml.cs">
       <DependentUpon>Page_主内容.xaml</DependentUpon>
     </Compile>
@@ -108,6 +111,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="NewWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Pages\Page_SignIn.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
