--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -85,6 +85,7 @@
     </Compile>
     <Compile Include="ViewModel\ViewModel_Report.cs" />
     <Compile Include="ViewModel\ViewModel_操作记录.cs" />
+    <Compile Include="ViewModel\WindowSize.cs" />
     <Compile Include="View\Pages\Page_SignIn.xaml.cs">
       <DependentUpon>Page_SignIn.xaml</DependentUpon>
     </Compile>
