--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -79,10 +79,12 @@
     <Compile Include="Helper\FileSystemCheck.cs" />
     <Compile Include="Helper\Log.cs" />
     <Compile Include="Helper\Secure.cs" />
+    <Compile Include="Model\Model_AddData.cs" />
     <Compile Include="Model\Model_操作记录.cs" />
     <Compile Include="NewWindow.xaml.cs">
       <DependentUpon>NewWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\ViewModel_AddData.cs" />
     <Compile Include="ViewModel\ViewModel_Report.cs" />
     <Compile Include="ViewModel\ViewModel_操作记录.cs" />
     <Compile Include="ViewModel\WindowSize.cs" />
