--- a/WpfApplication3/app.config
+++ b/WpfApplication3/app.config
@@ -73,6 +73,12 @@
             <setting name="初始金额_土地户" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="主窗口位置" serializeAs="String">
+                <value>0,0,0,0</value>
+            </setting>
+            <setting name="is主窗口最大化" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Wpf.Properties.Settings>
     </userSettings>
 </configuration>
