--- a/WpfApplication3/WpfApplication3.csproj
+++ b/WpfApplication3/WpfApplication3.csproj
@@ -86,6 +86,7 @@
     </Compile>
     <Compile Include="ViewModel\ViewModel_AddData.cs" />
     <Compile Include="ViewModel\ViewModel_Report.cs" />
+    <Compile Include="ViewModel\ViewModel_Surplus.cs" />
     <Compile Include="ViewModel\ViewModel_操作记录.cs" />
     <Compile Include="View\Pages\Page_SignIn.xaml.cs">
       <DependentUpon>Page_SignIn.xaml</DependentUpon>
