--- a/WpfApplication3/金字塔财务管理工具.csproj
+++ b/WpfApplication3/金字塔财务管理工具.csproj
@@ -98,6 +98,9 @@
     <Compile Include="View\Pages\Page_添加数据.xaml.cs">
       <DependentUpon>Page_添加数据.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Windows\AboutWindow.xaml.cs">
+      <DependentUpon>AboutWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Windows\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
@@ -131,6 +134,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\ResourceDictionarys\TabControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Windows\AboutWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
