--- a/WpfApplication3/金字塔财务管理工具.csproj
+++ b/WpfApplication3/金字塔财务管理工具.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Helper\FileSystemCheck.cs" />
     <Compile Include="Helper\Log.cs" />
     <Compile Include="Helper\Secure.cs" />
+    <Compile Include="Helper\XmHelperl.cs" />
     <Compile Include="Model\Model_AddData.cs" />
     <Compile Include="Model\Model_操作记录.cs" />
     <Compile Include="NewWindow.xaml.cs">
