--- a/WpfApplication3/金字塔财务管理工具.csproj
+++ b/WpfApplication3/金字塔财务管理工具.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Helper\DebugOnly.cs" />
     <Compile Include="Helper\FileSystemCheck.cs" />
     <Compile Include="Helper\Log.cs" />
+    <Compile Include="Helper\Regedit.cs" />
     <Compile Include="Helper\Secure.cs" />
     <Compile Include="Helper\XmlHelper.cs" />
     <Compile Include="Model\Model_AddData.cs" />
