--- a/WpfApplication3/金字塔财务管理工具.csproj
+++ b/WpfApplication3/金字塔财务管理工具.csproj
@@ -213,9 +213,9 @@
     <Resource Include="View\Image\Pyramid_Logo_V1_140204-01.png" />
     <Resource Include="Docs\注册流程.txt" />
     <Resource Include="View\Image\Pyramid_Logo_V1_b_140204.png" />
-    <Resource Include="Data\config.xml">
+    <None Include="Data\config.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    </None>
     <Content Include="Docs\dotNetFx40_Full_setup.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
